# Meta-Learning-Implementation-with-MAML

./: .gitignore  .pre-commit-config.yaml  0964.py  README.md  modernized_demo.py  pyproject.toml  requirements.txt  run_workflow.py
.github/workflows/: ci.yml
configs/: baseline_mnist.yaml  maml_mnist.yaml
demo/: app.py
notebooks/: maml_tutorial.ipynb
scripts/: evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py
src/metrics/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
src/viz/: __init__.py
tests/: test_meta_learning.py
